fix: button spacing and text-overflow in Files breadcrumb

--- a/src/ui/files/Files.scss
+++ b/src/ui/files/Files.scss
@@ -43,15 +43,18 @@
 
       .breadcrumb {
         margin-left: $margin-xl;
-        margin-right: auto;
       }
 
       .item-actions {
-        margin-right: $margin-xl;
+        margin-right: auto;
       }
 
       button {
         margin-left: $margin-small;
+
+        &.new-folder {
+          margin-left: auto;
+        }
       }
     }
 
