--- a/src/ui/files/components/Breadcrumb.scss
+++ b/src/ui/files/components/Breadcrumb.scss
@@ -22,6 +22,7 @@
       color: $text-dark-secondary;
       overflow: hidden;
       text-overflow: ellipsis;
+      white-space: nowrap;
     }
 
     &:last-of-type a {
